Fixed stepper labels overflowing issue (#637)

--- a/src/app/_samples/mediaco/components/multi-step/multi-step.component.scss
+++ b/src/app/_samples/mediaco/components/multi-step/multi-step.component.scss
@@ -191,7 +191,6 @@ mat-horizontal-stepper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 120px; /* Provides consistent spacing for labels */
   text-align: center;
   padding: 1rem 0;
 }
